# GTest_CPP

./: README.md
unit_test/: CMakeLists.txt  EasyTesting.hpp  ForTesting.hpp
unit_test/src/: Easy_T.cpp  ForTest.cpp  Test.cpp
