cmake_minimum_required (VERSION 2.6)
project (UTest)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ./bin)
file(GLOB SOURCES ${CMAKE_SOURCE_DIR}/src/*.cpp)
file(GLOB FILES ${CMAKE_SOURCE_DIR}/*.hpp)
include_directories(${CMAKE_SOURCE_DIR}/../include)
include_directories(${CMAKE_SOURCE_DIR})
link_directories(${CMAKE_SOURCE_DIR}/../lib)
add_executable(UTest ${SOURCES} ${FILES})
target_link_libraries(UTest gtest)
target_link_libraries(UTest gtest_main)
target_link_libraries(UTest pthread)
